# ZBar

cmake/: CMakeLists.txt  config.h.in
include/: zbar.h
zbar/: decoder.c  decoder.h  error.h  image.c  img_scanner.c  processor.c  symbol.c  thread.h
zbar/decoder/: codabar.c  code39.c  databar.c  ean.c  i25.c
zbar/processor/: lock.c  win.c
zbar/qrcode/: binarize.c
zbar/window/: dib.c  win.c
